% Added pagination to list methods.